--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
-    
-    <img src="img/frame-iphone.png" alt="iphone">
- 
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" frameborder="0" name="tela" id="tela">
+                Seu navegador não é compatível com isso.
+            </iframe>
+        </section>
+        <section id="redes-sociais">
+            <a href="#" target="tela"><img src="img/logo-home.jpg" alt=""></a> <br>      
+            <a href="#" target="tela"><img src="img/logo-youtube.jpg" alt=""></a> <br>     
+            <a href="#" target="tela"><img src="img/logo-github.jpg" alt=""></a> <br>     
+            <a href="#" target="tela"><img src="img/logo-instagram.jpg" alt=""></a> <br>     
+            <a href="#" target="tela"><img src="img/logo-twitter.jpg" alt=""></a> <br>       
+            <a href="#" target="tela"><img src="img/logo-facebook.jpg" alt=""></a>
+        </section>
+    </main>
 </body>
 </html>
