--- a/facebook.html
+++ b/facebook.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <img src="img/tela-facebook.jpg" alt="">
-    <a href="https://www.youtube.com/user/cursoemvideo/playlists" target="_blank">ACESSE</a>
+    <a href="https://www.facebook.com/gustavoguanabara" target="_blank">ACESSE</a>
 </body>
 </html>
